# kde1

./: .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh
